Events Card size changed on mobile to take 90% adn also horizontal scroll bug removed from Event Cards

--- a/src/styles/app.scss
+++ b/src/styles/app.scss
@@ -43,7 +43,7 @@ $theme-colors: (
   margin: " 10px 10px";
   overflow-y: hidden;
   position: relative;
-  @media only screen and (max-width: 400px) {
+  @media only screen and (max-width: 500px) {
     min-width: 38vh;
   }
 }
